tests/snapshots/snapshots__pipeline@derive_hash.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/derive_hash.pr
---
== tokens ==
VOpen Class UIdent("Hash") LParen Ident("a") RParen VOpen Ident("hash") Colon LParen Ident("a") RParen Arrow KwString VClose VSemi Instance Ident("hashInt") Colon UIdent("Hash") LParen KwInt RParen VOpen Fn Ident("hash") LParen Ident("x") RParen Eq Ident("blake3") LParen Ident("concat") LParen StringLit("i") Comma Ident("show_int") LParen Ident("x") RParen RParen RParen VClose VSemi Type UIdent("Pair") Eq UIdent("MkPair") LParen KwInt Comma KwInt RParen Deriving LParen UIdent("Hash") RParen VSemi Fn Ident("main") LParen RParen Eq Ident("hash") LParen UIdent("MkPair") LParen Int(IntLit { value: 1, suffix: None }) Comma Int(IntLit { value: 2, suffix: None }) RParen RParen VClose

== ast ==
Program {
    types: [
        DataDecl {
            name: "Pair",
            params: [],
            param_kinds: [],
            ctors: [
                Ctor {
                    name: "MkPair",
                    args: [
                        Int,
                        Int,
                    ],
                    fields: None,
                },
            ],
            deriving: [
                (
                    "Hash",
                    155..159,
                ),
            ],
            newtype: false,
            span: 116..160,
        },
    ],
    effects: [],
    errors: [],
    aliases: [],
    classes: [
        ClassDecl {
            name: "Hash",
            param: "a",
            supers: [],
            methods: [
                (
                    "hash",
                    Fun(
                        [
                            Var(
                                "a",
                            ),
                        ],
                        Empty,
                        Str,
                    ),
                ),
            ],
            span: 0..36,
        },
    ],
    instances: [
        InstanceDecl {
            name: "hashInt",
            class: "Hash",
            head: Int,
            context: [],
            methods: [
                Decl {
                    name: "hash",
                    params: [
                        Param {
                            name: "x",
                            ty: None,
                            borrow: false,
                            default: None,
                        },
                    ],
                    ret: None,
                    eff: None,
                    constraints: [],
                    body: Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "blake3",
                                ),
                                span: 82..88,
                            },
                            [
                                Spanned {
                                    node: Call(
                                        Spanned {
                                            node: Var(
                                                "concat",
                                            ),
                                            span: 89..95,
                                        },
                                        [
                                            Spanned {
                                                node: Str(
                                                    "i",
                                                ),
                                                span: 96..99,
                                            },
                                            Spanned {
                                                node: Call(
                                                    Spanned {
                                                        node: Var(
                                                            "show_int",
                                                        ),
                                                        span: 101..109,
                                                    },
                                                    [
                                                        Spanned {
                                                            node: Var(
                                                                "x",
                                                            ),
                                                            span: 110..111,
                                                        },
                                                    ],
                                                ),
                                                span: 101..112,
                                            },
                                        ],
                                    ),
                                    span: 89..113,
                                },
                            ],
                        ),
                        span: 82..114,
                    },
                    wheres: [],
                    span: 69..114,
                },
            ],
            module: "",
            span: 38..114,
        },
    ],
    fns: [
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "hash",
                        ),
                        span: 174..178,
                    },
                    [
                        Spanned {
                            node: Call(
                                Spanned {
                                    node: Var(
                                        "MkPair",
                                    ),
                                    span: 179..185,
                                },
                                [
                                    Spanned {
                                        node: Int(
                                            IntLit {
                                                value: 1,
                                                suffix: None,
                                            },
                                        ),
                                        span: 186..187,
                                    },
                                    Spanned {
                                        node: Int(
                                            IntLit {
                                                value: 2,
                                                suffix: None,
                                            },
                                        ),
                                        span: 189..190,
                                    },
                                ],
                            ),
                            span: 179..191,
                        },
                    ],
                ),
                span: 174..192,
            },
            wheres: [],
            span: 162..192,
        },
    ],
}

== types ==
main : () -> String

== core (cbpv) ==
fn main() =
  return 1 to t@0
  return 2 to t@1
  return MkPair(t@0, t@1) to t@2
  i@hashPair@hash(t@2)
fn i@hashInt@hash(x) =
  return "i" to t@3
  return x to t@4
  show_int(t@4) to t@5
  concat(t@3, t@5) to t@6
  blake3(t@6)
fn hashInt() =
  return _DHash(thunk { \_p0. i@hashInt@hash(_p0) })
fn i@hashPair@hash(_x) =
  return _x to t@7
  case t@7 of
    MkPair(_f0, _f1) =>
      return "c6:MkPair/0" to t@8
      return _f0 to t@9
      i@hashInt@hash(t@9) to t@10
      return _f1 to t@11
      i@hashInt@hash(t@11) to t@12
      concat(t@10, t@12) to t@13
      concat(t@8, t@13) to t@14
      blake3(t@14)
fn hashPair() =
  return _DHash(thunk { \_p0. i@hashPair@hash(_p0) })

== fbip (rc) ==
fn main() =
  return 1 to t@0
  return 2 to t@1
  return MkPair(t@0, t@1) to t@2
  i@hashPair@hash(t@2)
fn i@hashInt@hash(x) =
  return "i" to t@3
  return x to t@4
  show_int(t@4) to t@5
  concat(t@3, t@5) to t@6
  blake3(t@6)
fn hashInt() =
  return _DHash(thunk { \_p0. i@hashInt@hash(_p0) })
fn i@hashPair@hash(_x) =
  return _x to t@7
  case t@7 of
    MkPair(_f0, _f1) =>
      dup _f0
      dup _f1
      drop t@7
      return "c6:MkPair/0" to t@8
      return _f0 to t@9
      i@hashInt@hash(t@9) to t@10
      return _f1 to t@11
      i@hashInt@hash(t@11) to t@12
      concat(t@10, t@12) to t@13
      concat(t@8, t@13) to t@14
      blake3(t@14)
fn hashPair() =
  return _DHash(thunk { \_p0. i@hashPair@hash(_p0) })

== llvm ==
; ModuleID = 'prism'
source_filename = "prism"

@.str0 = private constant { i64, i64, i64, [12 x i8] } { i64 1152921504606846976, i64 1398034944, i64 11, [12 x i8] c"c6:MkPair/0\00" }, align 8
@.str1 = private constant { i64, i64, i64, [2 x i8] } { i64 1152921504606846976, i64 1398034944, i64 1, [2 x i8] c"i\00" }, align 8
@prism_native_kont_table = constant [1137 x i8] c"scheme  prism-core-hash-v2\0Abundle  c6d9b32711aa132e15cc9ce9642e45bede46e848c8853a30ec14ee8f1a4447c9\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:c6d9b32711aa132e15cc9ce9642e45bede46e848c8853a30ec14ee8f1a4447c9\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Afn      prismfn_hashInt  288615e595b75457deb1197f6dab3fc00b98f963f5488b08ca89de595ea8b730  hashInt\0Afn      prismfn_hashPair  88fbb3b674cc4fff879484d86a983747982a3fce130090e31a32d970f35f25bf  hashPair\0Afn      prismfn_iZahashIntZahash  0eabe45704c4040cd9f346fa1f49da315c6911b067a1d67f0bb14b60a891322a  i@hashInt@hash\0Afn      prismfn_iZahashPairZahash  f8f813f0b1320a758d4109d7298ace29466040c2033c2b25b81933e1dfbcca02  i@hashPair@hash\0Afn      prismfn_main  39e60a011a6803322d624c02f068d275f107995912c568fa085b08ae65792311  main\0A\00", section ",.prism_kont", align 1
@prism_native_kont_state_map = constant [1075 x i8] c"state-map 1\0Ascheme  prism-core-hash-v2\0Abundle  c6d9b32711aa132e15cc9ce9642e45bede46e848c8853a30ec14ee8f1a4447c9\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:c6d9b32711aa132e15cc9ce9642e45bede46e848c8853a30ec14ee8f1a4447c9\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Aslot-format prism-native-abi-word-v1\0Astate prismfn_iZahashIntZahash 0eabe45704c4040cd9f346fa1f49da315c6911b067a1d67f0bb14b60a891322a i@hashInt@hash arity 1 slots abi-word[arg0=%a0:word]\0Astate prismfn_iZahashPairZahash f8f813f0b1320a758d4109d7298ace29466040c2033c2b25b81933e1dfbcca02 i@hashPair@hash arity 1 slots abi-word[arg0=%a0:word]\0Astate prismfn_main 39e60a011a6803322d624c02f068d275f107995912c568fa085b08ae65792311 main arity 0 slots abi-word[]\0A\00", section ",.prism_kont", align 1
@.kont_symbol2 = private constant [25 x i8] c"prismfn_iZahashIntZahash\00"
@.kont_hash2 = private constant [65 x i8] c"0eabe45704c4040cd9f346fa1f49da315c6911b067a1d67f0bb14b60a891322a\00"
@.kont_name2 = private constant [15 x i8] c"i@hashInt@hash\00"
@.kont_symbol4 = private constant [13 x i8] c"prismfn_main\00"
@.kont_hash4 = private constant [65 x i8] c"39e60a011a6803322d624c02f068d275f107995912c568fa085b08ae65792311\00"
@.kont_name4 = private constant [5 x i8] c"main\00"
@prism_native_kont_ptrs = constant [2 x { ptr, ptr, ptr, ptr }] [{ ptr, ptr, ptr, ptr } { ptr @prismfn_iZahashIntZahash, ptr @.kont_symbol2, ptr @.kont_hash2, ptr @.kont_name2 }, { ptr, ptr, ptr, ptr } { ptr @prismfn_main, ptr @.kont_symbol4, ptr @.kont_hash4, ptr @.kont_name4 }], section ",.prism_kont", align 8
@prism_native_kont_ptrs_len = constant i64 2, section ",.prism_kont", align 8
@llvm.used = appending global [4 x ptr] [ptr @prism_native_kont_table, ptr @prism_native_kont_state_map, ptr @prism_native_kont_ptrs, ptr @prism_native_kont_ptrs_len], section ",llvm.metadata"

; Function Attrs: nounwind
define i64 @prismfn_main() #0 {
entry:
  %t1 = call i64 @prismfn_iZahashIntZahash(i64 3)
  %t3 = call i64 @prismfn_iZahashIntZahash(i64 5)
  %t4 = call i64 @prism_str_concat(i64 %t1, i64 %t3)
  call void @prism_rc_dec(i64 %t1)
  call void @prism_rc_dec(i64 %t3)
  %t6 = call i64 @prism_str_concat(i64 ptrtoint (ptr @.str0 to i64), i64 %t4)
  call void @prism_rc_dec(i64 ptrtoint (ptr @.str0 to i64))
  call void @prism_rc_dec(i64 %t4)
  %t7 = call i64 @prism_blake3(i64 %t6)
  call void @prism_rc_dec(i64 %t6)
  ret i64 %t7
}

; Function Attrs: nounwind
define i64 @prismfn_iZahashIntZahash(i64 %a0) #0 {
entry:
  %t0 = call i64 @prism_show_int(i64 %a0)
  call void @prism_rc_dec(i64 %a0)
  %t2 = call i64 @prism_str_concat(i64 ptrtoint (ptr @.str1 to i64), i64 %t0)
  call void @prism_rc_dec(i64 ptrtoint (ptr @.str1 to i64))
  call void @prism_rc_dec(i64 %t0)
  %t3 = call i64 @prism_blake3(i64 %t2)
  call void @prism_rc_dec(i64 %t2)
  ret i64 %t3
}

; Function Attrs: nounwind
declare i64 @prism_str_concat(i64, i64) #0

; Function Attrs: nounwind
declare void @prism_rc_dec(i64) #0

; Function Attrs: nounwind
declare i64 @prism_blake3(i64) #0

; Function Attrs: nounwind
declare i64 @prism_show_int(i64) #0

attributes #0 = { nounwind }

== run ==
output: []
result: 16e2a2205632f027b1ed555721b06ae259890538cad64aa0386a1bff8be42061
