tests/snapshots/snapshots__pipeline@div_zero.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/div_zero.pr
---
== tokens ==
VOpen Fn Ident("main") LParen RParen Eq Int(IntLit { value: 10, suffix: None }) Slash Int(IntLit { value: 0, suffix: None }) VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Bin(
                    Div,
                    Spanned {
                        node: Int(
                            IntLit {
                                value: 10,
                                suffix: None,
                            },
                        ),
                        span: 12..14,
                    },
                    Spanned {
                        node: Int(
                            IntLit {
                                value: 0,
                                suffix: None,
                            },
                        ),
                        span: 17..18,
                    },
                ),
                span: 12..18,
            },
            wheres: [],
            span: 0..18,
        },
    ],
}

== types ==
main : () -> Int

== core (cbpv) ==
fn main() =
  return 10 to t@0
  return 0 to t@1
  t@0 / t@1

== fbip (rc) ==
fn main() =
  return 10 to t@0
  return 0 to t@1
  t@0 / t@1

== llvm ==
; ModuleID = 'prism'
source_filename = "prism"

@prism_native_kont_table = constant [705 x i8] c"scheme  prism-core-hash-v2\0Abundle  3d215a232fb26212ee6c435f077308a3ed5bfa3f6228d6c8b2a7415e5c163de6\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:3d215a232fb26212ee6c435f077308a3ed5bfa3f6228d6c8b2a7415e5c163de6\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Afn      prismfn_main  0cc196d553d7248a3658382832399f32f6a97ad69a026c3cc8996a7c62f26c94  main\0A\00", section ",.prism_kont", align 1
@prism_native_kont_state_map = constant [775 x i8] c"state-map 1\0Ascheme  prism-core-hash-v2\0Abundle  3d215a232fb26212ee6c435f077308a3ed5bfa3f6228d6c8b2a7415e5c163de6\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:3d215a232fb26212ee6c435f077308a3ed5bfa3f6228d6c8b2a7415e5c163de6\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Aslot-format prism-native-abi-word-v1\0Astate prismfn_main 0cc196d553d7248a3658382832399f32f6a97ad69a026c3cc8996a7c62f26c94 main arity 0 slots abi-word[]\0A\00", section ",.prism_kont", align 1
@.kont_symbol0 = private constant [13 x i8] c"prismfn_main\00"
@.kont_hash0 = private constant [65 x i8] c"0cc196d553d7248a3658382832399f32f6a97ad69a026c3cc8996a7c62f26c94\00"
@.kont_name0 = private constant [5 x i8] c"main\00"
@prism_native_kont_ptrs = constant [1 x { ptr, ptr, ptr, ptr }] [{ ptr, ptr, ptr, ptr } { ptr @prismfn_main, ptr @.kont_symbol0, ptr @.kont_hash0, ptr @.kont_name0 }], section ",.prism_kont", align 8
@prism_native_kont_ptrs_len = constant i64 1, section ",.prism_kont", align 8
@llvm.used = appending global [4 x ptr] [ptr @prism_native_kont_table, ptr @prism_native_kont_state_map, ptr @prism_native_kont_ptrs, ptr @prism_native_kont_ptrs_len], section ",llvm.metadata"

; Function Attrs: nounwind
define i64 @prismfn_main() #0 {
entry:
  %t2 = call i64 @prism_rt_int_div(i64 21, i64 1)
  call void @prism_rc_dec(i64 21)
  call void @prism_rc_dec(i64 1)
  ret i64 %t2
}

; Function Attrs: nounwind
declare i64 @prism_rt_int_div(i64, i64) #0

; Function Attrs: nounwind
declare void @prism_rc_dec(i64) #0

attributes #0 = { nounwind }

== run ==
error: division by zero
