tests/snapshots/snapshots__pipeline@dup_effect.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/dup_effect.pr
---
== tokens ==
VOpen Effect UIdent("A") VOpen Ident("ping") LParen KwInt RParen Colon KwUnit VClose VSemi Effect UIdent("B") VOpen Ident("ping") LParen KwInt RParen Colon KwUnit VClose VSemi Fn Ident("main") LParen RParen Eq Ident("ping") LParen Int(IntLit { value: 1, suffix: None }) RParen VClose

== ast ==
Program {
    types: [],
    effects: [
        EffectDecl {
            name: "A",
            params: [],
            ops: [
                EffOp {
                    name: "ping",
                    params: [
                        Int,
                    ],
                    ret: Unit,
                    grade: Many,
                    span: 11..15,
                },
            ],
            span: 0..27,
        },
        EffectDecl {
            name: "B",
            params: [],
            ops: [
                EffOp {
                    name: "ping",
                    params: [
                        Int,
                    ],
                    ret: Unit,
                    grade: Many,
                    span: 40..44,
                },
            ],
            span: 29..56,
        },
    ],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "ping",
                        ),
                        span: 70..74,
                    },
                    [
                        Spanned {
                            node: Int(
                                IntLit {
                                    value: 1,
                                    suffix: None,
                                },
                            ),
                            span: 75..76,
                        },
                    ],
                ),
                span: 70..77,
            },
            wheres: [],
            span: 58..77,
        },
    ],
}

== types ==
[E6007] Type Error: operation `ping` is declared in both `A` and `B`
   ╭─[ <source>:4:1 ]
   │
 4 │ ╭─▶ effect B
 5 │ ├─▶   ping(Int) : Unit
   │ │                        
   │ ╰──────────────────────── operation `ping` is declared in both `A` and `B`
   │
   ├─[ <source>:4:1 ]
   │
 1 │ ╭─▶ effect A
 2 │ ├─▶   ping(Int) : Unit
   │ │                        
   │ ╰──────────────────────── `ping` is first declared by effect `A`
   │     
   │     Help: rename the operation in effect `B`, or handle it through its own effect
───╯
