tests/snapshots/snapshots__pipeline@effect_net_reserved.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/effect_net_reserved.pr
---
== tokens ==
VOpen Effect UIdent("Net") VOpen Ident("fetch") LParen KwString RParen Colon KwString VClose VSemi Fn Ident("main") LParen RParen Colon KwInt Eq Int(IntLit { value: 0, suffix: None }) VClose

== ast ==
Program {
    types: [],
    effects: [
        EffectDecl {
            name: "Net",
            params: [],
            ops: [
                EffOp {
                    name: "fetch",
                    params: [
                        Str,
                    ],
                    ret: Str,
                    grade: Many,
                },
            ],
            span: 149..184,
        },
    ],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "main",
            params: [],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Int(
                    IntLit {
                        value: 0,
                        suffix: None,
                    },
                ),
                span: 204..205,
            },
            wheres: [],
            span: 186..205,
        },
    ],
}

== types ==
[E6006] Type Error: effect `Net` is a reserved name (reserved for the network boundary capability)
   ╭─[ <source>:3:1 ]
   │
 3 │ ╭─▶ effect Net
 4 │ ├─▶   fetch(String) : String
   │ │                              
   │ ╰────────────────────────────── effect `Net` is a reserved name (reserved for the network boundary capability)
───╯
